# embarcados

./: .gitignore  CMakeLists.txt  PLANO.md  classes.c  classes.cpp  controlePID.m  main.c  maquinaEstados.c  maquinaEstados.cpp  mesa_equilibrista.cpp  mesa_equilibrista.ino  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32cam  untitled.m
MaquinaEstados/: maquinaEstados.cpp  maquinaEstados.h
antigo/: classes.cpp  classes.h
apps/: README.md  camera_teste.h  teste_camera.cpp  teste_pca9685.cpp  teste_servo_ledc.cpp  teste_servos.cpp  wifi_stream.cpp
classes/: Bluetooth.cpp  Bluetooth.h  ControladorPID.cpp  ControladorPID.h  DriverDeAtuacao.cpp  DriverDeAtuacao.h  FilaDeEventos.cpp  FilaDeEventos.h  ModuloGerenciador.cpp  ModuloGerenciador.h
docs/: ARQUITETURA.md  RELATORIO.md  VISAO.md
include/: config.h  tipos.h
src/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  camera_teste.cpp  comandos_serial.cpp  comandos_serial.h  controle_pid.cpp  controle_pid.h  driver_atuacao.cpp  driver_atuacao.h  fila_eventos.h  gerenciador.cpp  gerenciador.h  idf_component.yml  main.cpp  maquina_estados.cpp  maquina_estados.h  visao.cpp  visao.h  wifi_controle.cpp  wifi_controle.h  wifi_stream.cpp  wifi_stream.h
src/comms/: wifi_controle.cpp  wifi_controle.h
src/controle/: controle_pid.h  driver_atuacao.h  fila_eventos.cpp  gerenciador.cpp  gerenciador.h
src/visao/: debug_visao.cpp  debug_visao.h  visao.cpp  visao.h  visao_interno.h
tools/: monitor_log.sh  plot_telemetria.py  recebe_debug_visao.py  recebe_foto.py  relatorio_calibracao_visao.py  sweep_fps.py
