idf_component_register(
    SRCS
        "main.cpp"
        "comandos_serial.cpp"
        "visao/visao.cpp"
        "visao/debug_visao.cpp"
        "controle/gerenciador.cpp"
        "controle/controle_pid.cpp"
        "controle/driver_atuacao.cpp"
        "controle/fila_eventos.cpp"
        "comms/wifi_controle.cpp"
    INCLUDE_DIRS
        "."
        "visao"
        "controle"
        "comms"
        "../include"
    REQUIRES
        esp_wifi
        esp_http_server
        nvs_flash
        esp_netif
        driver
        espressif__esp_jpeg
)
